--- a/mysite/uniManagment/templates/users/dashboard.html
+++ b/mysite/uniManagment/templates/users/dashboard.html
@@ -6,13 +6,13 @@
 Hello, {{ user.username|default:'Guest' }}!
 
 <div>
-	{% if role == 'student' %}
+	{% if isStudent == True %}
 		<H2>Student</H2>
 		<a href="/submitedexercise/index">submit Exercise</a><br/>
 		<a href="/Video/index">video</a><br/>
 	{% endif %}
 
-	{% if role == 'master' %}
+	{% if isStudent == False %}
 		<H2>Master</H2>
 		<a href="/submitedexercise/index">submited Exercises</a><br/>
 		<a href="/exercise/index">Exercise</a><br/>
